Fix scrollbars only for windows

--- a/src/app/client/emailDetailedView/emailDetailedView.component.css
+++ b/src/app/client/emailDetailedView/emailDetailedView.component.css
@@ -6,3 +6,8 @@
     box-shadow: 0px 0px 1px -2px rgba(0,0,0,.2), 0 0 0 0 rgba(0,0,0,.0), 0 1px 5px 0 rgba(0,0,0,.12);
     height:100%;
 }
+
+.scrollable {
+  max-height: 100%;
+  overflow-y: auto;
+}
